--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "description": "* Typescript\r * Node js\r * Mysql\r * Docker",
   "version": "1.0.0",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.28.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -T app.ts"
+    "dev": "nodemon -T app.ts",
+    "start": "tsc && nodemon dist/app.js"
   },
   "repository": {
     "type": "git",
